--- a/GameSet/Base.lproj/Main.storyboard
+++ b/GameSet/Base.lproj/Main.storyboard
@@ -30,16 +30,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ngA-kf-0OP">
-                                <rect key="frame" x="23.666666666666657" y="732" width="329.66666666666674" height="46"/>
+                                <rect key="frame" x="32" y="732" width="312.33333333333331" height="46"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="84o-ha-Fbr">
-                                        <rect key="frame" x="0.0" y="0.0" width="18.333333333333332" height="46"/>
-                                        <fontDescription key="fontDescription" name="Courier-BoldOblique" family="Courier" pointSize="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="17" height="46"/>
+                                        <fontDescription key="fontDescription" name="Courier-BoldOblique" family="Courier" pointSize="28"/>
                                         <color key="textColor" red="1" green="0.2527923882" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="irC-IX-GB6">
-                                        <rect key="frame" x="26.333333333333329" y="0.0" width="32" height="46"/>
+                                        <rect key="frame" x="25" y="0.0" width="32" height="46"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                         <state key="normal" title="🍡">
                                             <color key="titleColor" red="0.7803693413734436" green="0.82622599601745605" blue="0.074428580701351166" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -49,14 +49,14 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🤺" textAlignment="natural" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ztk-zj-2xx">
-                                        <rect key="frame" x="66.333333333333329" y="0.0" width="28" height="46"/>
+                                        <rect key="frame" x="65" y="0.0" width="28" height="46"/>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="28"/>
                                         <color key="textColor" red="0.7803693413734436" green="0.82622599601745605" blue="0.074428580701351166" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pdr-02-lOg">
-                                        <rect key="frame" x="102.33333333333331" y="0.0" width="58" height="46"/>
-                                        <fontDescription key="fontDescription" name="CourierNewPS-BoldMT" family="Courier New" pointSize="28"/>
+                                        <rect key="frame" x="101" y="0.0" width="53" height="46"/>
+                                        <fontDescription key="fontDescription" name="CourierNewPS-BoldMT" family="Courier New" pointSize="26"/>
                                         <state key="normal" title="0➙3">
                                             <color key="titleColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -65,14 +65,14 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="150 🏆" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDi-Mr-0Cy">
-                                        <rect key="frame" x="168.33333333333334" y="0.0" width="102.33333333333334" height="46"/>
-                                        <fontDescription key="fontDescription" name="Courier-BoldOblique" family="Courier" pointSize="30"/>
+                                        <rect key="frame" x="162" y="0.0" width="95.333333333333314" height="46"/>
+                                        <fontDescription key="fontDescription" name="Courier-BoldOblique" family="Courier" pointSize="28"/>
                                         <color key="textColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="obv-aA-J57">
-                                        <rect key="frame" x="278.66666666666663" y="0.0" width="51" height="46"/>
-                                        <fontDescription key="fontDescription" name="CourierNewPS-BoldMT" family="Courier New" pointSize="28"/>
+                                        <rect key="frame" x="265.33333333333331" y="0.0" width="47" height="46"/>
+                                        <fontDescription key="fontDescription" name="CourierNewPS-BoldMT" family="Courier New" pointSize="26"/>
                                         <state key="normal" title="New">
                                             <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
